--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.20.0",
     "@supabase/supabase-js": "^2.45.0",
     "downloadjs": "^1.4.7",
     "html-to-image": "^1.11.11",
