--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.20.0",
+    "@hugocxl/react-to-image": "^0.0.9",
     "@supabase/supabase-js": "^2.45.0",
     "@xuannghia/html2canvas": "^1.3.3",
+    "dom-to-image": "^2.6.0",
     "downloadjs": "^1.4.7",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
@@ -21,6 +23,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/dom-to-image": "^2.6.7",
     "@types/downloadjs": "^1.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
